--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,18 @@
 <html ng-app>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Evervest Interview Project</title>
-  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="lib/bootstrap-css-only/css/bootstrap.css">
 </head>
 <body>
-  <h1>{{'Hello' + ' World!'}}</h1>
+  <div class="container">
+    <div ui-view></div>
+  </div>
+
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="lib/angular-animate/angular-animate.js"></script>
+  <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 </body>
 </html>
