--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="app">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,5 +15,9 @@
   <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="lib/angular-animate/angular-animate.js"></script>
   <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="app/components/comparisons/comparisons.module.js"></script>
+  <script src="app/components/comparisons/comparisons.controller.js"></script>
+  <script src="app/app.module.js"></script>
+  <script src="app/app.config.js"></script>
 </body>
 </html>
