Add scenario comparisons template and styling.

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Evervest Interview Project</title>
   <link rel="stylesheet" href="lib/bootstrap-css-only/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/styles/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="container">
+  <div class="container scenario-comparisons">
     <div ui-view></div>
   </div>
 
